--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^5.3.11"
