--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-date-picker": "^10.5.0",
     "react-dom": "^18.2.0",
