--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,7 +1,3 @@
-spring.datasource.url=jdbc:h2:~/task-manager;
-spring.datasource.username=sa
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.h2.console.path=/db
-spring.h2.console.enabled=true
-
+rsa:
+    private-key: classpath:certificates/private.pem
+    public-key: classpath:certificates/public.pem
