--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,3 +1,19 @@
 rsa:
     private-key: classpath:certificates/private.pem
     public-key: classpath:certificates/public.pem
+spring:
+    datasource:
+        url: jdbc:h2:file:~/taskManager
+        username: sa
+        password:
+        driverClassName: org.h2.Driver
+    jpa:
+        hibernate:
+            ddl-auto: create-drop
+    h2:
+        console:
+            enabled: true
+            path: /db
+logging:
+    level:
+        org.springframework.security: DEBUG
